--- a/responsive-design-mobile-first/style.css
+++ b/responsive-design-mobile-first/style.css
@@ -101,6 +101,15 @@ header img {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     background-color: var(--off-white);
+    transition: all .2s ease-in-out;
+}
+
+.header__title-container .header__button:hover {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
 }
 
 .header__button span {
