added some final touches to the project

--- a/curso-de-css-grid-basic/project/style.css
+++ b/curso-de-css-grid-basic/project/style.css
@@ -168,6 +168,8 @@
         .hero {
             grid-template-columns: minmax(300px, 500px);
             justify-content: center;
+            place-content: center;
+            text-align: center;
         }
         .hero-image {
             display: none
