--- a/curso-maquetación-en-css/style.css
+++ b/curso-maquetación-en-css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --black: #025C4A;
+    --white: #e7f0ee;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -6,9 +11,16 @@
 
 html {
     font-size: 62.5%;
+    font-family: 'JetBrains Mono', monospace;
 }
 
 body {
+    font-family: 'JetBrains Mono', monospace;
+    background: var(--white);
+}
+
+.home-body {
+    background: var(--white);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -16,10 +28,16 @@ body {
     right: 0;
 }
 
-a {
+.grid-container {
+    max-width: 980px;
+    margin: auto;
+}
+
+.cricadev {
     text-decoration: none;
     display: inline;
-    color: #000;
+    color: #42D0B4;
+    border: 2px solid #42D0B4;
 }
 
 header {
@@ -27,5 +45,302 @@ header {
     height: 140px;
     display: grid;
     grid-template-rows: 1fr 1fr;
-    background-color: green;
+}
+
+header nav {
+    background: rgba(0, 0, 0, .5);
+}
+
+header .header-icons-container {
+    width: 100%;
+    height: 50px;
+    display: grid;
+    background-color: var(--black);
+}
+
+header .header-icons-container .icons {
+    width: 300px;
+    height: auto;
+    display: flex;
+    justify-items: flex-end;
+    align-items: center;
+    justify-content: space-between;
+    justify-self: end;
+    margin-right: 5rem;
+}
+
+header .icons i {
+    font-size: 4rem;
+}
+
+header .icons .fa-github {
+    color: white;
+}
+
+header .icons .fa-whatsapp {
+    color: #25d366
+}
+
+header .icons .fa-twitter {
+    color: #1DA1F2;
+}
+
+header .icons .fa-instagram {
+    background-color: red;
+    background-image: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+}
+
+header .icons .fa-linkedin {
+    color: #0077b5;
+}
+
+header .icons .fa-youtube {
+    color: #c4302b;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 90px;
+}
+
+nav .nav-logo-container {
+    margin-left: 50px;
+}
+
+nav .nav-logo-container img {
+    width: 100px;
+    padding: 10px;
+}
+
+nav .profile-link {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-right: 5rem;
+}
+
+nav .profile-link a {
+    color: #4D615D;
+    font-size: 2rem;
+    text-decoration: none;
+    font-weight: bold;
+    border-bottom: 2px solid var(--black);
+}
+
+.main {
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr 4fr 1fr;
+    background-image: url("https://images.pexels.com/photos/2653362/pexels-photo-2653362.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.main section {
+    display: grid;
+    grid-column: 2;
+    justify-items: center;
+    align-content: space-between;
+    height: 350px;
+    margin-top: 100px;
+}
+
+.main .main-description p {
+    width: 100%;
+    height: auto;
+    color: var(--white);
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 700;
+    line-height: 4rem;
+    padding: 40px 100px 0px 100px;
+}
+
+.main .main-description p strong {
+    border: 5px dashed #42D0B4;
+}
+
+.main .main-button {
+    display: grid;
+    align-items: center;
+    width: 150px;
+    height: 60px;
+    border: none;
+    padding-left: 15px;
+    font-size: 3rem;
+    background: #42D0B4;
+    box-shadow: 0px 0px 10px 2px #42D0B4;
+    transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+}
+
+.main .main-button:hover {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+}
+
+.main .main-button:active {
+    color: var(--black);
+}
+
+.main .main-button {
+    color: var(--white);
+    text-decoration: none;
+}
+
+.blogs-main {
+    display: grid;
+}
+
+.blogs-news-container {
+    background: #e6e9ed;
+    padding: 0 50px 40px;
+}
+
+.blogs-main-new {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 2fr;
+}
+
+.blogs-main-new h3 {
+    font-size: 2rem;
+    margin: 10px 0;
+}
+
+.blogs-news-img-container {
+    grid-column: 1;
+}
+
+.blogs-news-img-container img {
+    width: 85%;
+}
+
+.blogs-news-info-container {
+    grid-column: 2;
+}
+
+.blogs-news-info-container p {
+    margin-bottom: 35px;
+}
+
+.blogs-posts-container {
+    padding: 0 50px 40px;
+}
+
+.blogs-posts-container h3 {
+    border-bottom: 1px solid #cdd2da;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.blogs-button {
+    border: 1px solid #42D0B4;
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: var(--black);
+}
+
+.blogs-posts-container .post-container {
+    display: inline-block;
+    padding-left: 10px;
+    max-width: 30%;
+    margin: 25px 0;
+}
+
+.blogs-posts-container .post-container p {
+    margin: 20px 0;
+}
+
+.blogs-posts-container .post-container img {
+    width: 100%;
+}
+
+footer {
+    width: 100%;
+    height: 80px;
+    background-color: #4D615D;
+    border-top: 10px solid #42D0B4;
+}
+
+footer p {
+    color: white;
+    margin-top: 25px;
+    text-align: center;
+}
+
+.blogpost-img-container {
+    padding: 0 50px 40px;
+}
+
+.blogpost-img-container img {
+    width: 100%;
+}
+
+.blogpost-main-container {
+    padding: 0 50px 40px;
+}
+
+.blogpost-main-container h3 {
+    font-size: 2rem;
+    border-bottom: 1px solid #cdd2da;
+    padding-bottom: 20px;
+}
+
+.blogpost-main-container div h1 {
+    font-size: 3.5rem;
+}
+
+.blog-main {
+    display: grid;
+    grid-template-rows: 1fr 1fr .5fr;
+}
+
+.contact-main-container {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    background: #e6e9ed;
+}
+
+.contact-main-container a {
+    text-decoration: none;
+    color: black;
+    padding-left: 200px;
+    border-bottom: 1px solid black;
+    text-align: center;
+}
+
+.contact-main-container p {
+    text-align: center;
+}
+
+.contact-main-container img {
+    margin-left: 100px;
+    width: 96px;
+}
+
+.contact-left {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact-right {
+    display: flex;
+    justify-content: flex-end;
 }
