--- a/curso-maquetación-en-css/style.css
+++ b/curso-maquetación-en-css/style.css
@@ -1,6 +1,6 @@
 :root {
     --black: #025C4A;
-    --white: #e7f0ee;
+    --white: #cdf3eb;
 }
 
 * {
@@ -48,7 +48,7 @@ header {
 }
 
 header nav {
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .1);
 }
 
 header .header-icons-container {
@@ -164,6 +164,10 @@ nav .profile-link a {
     padding: 40px 100px 0px 100px;
 }
 
+.main .main-description a {
+    margin-top: 40px;
+}
+
 .main .main-description p strong {
     border: 5px dashed #42D0B4;
 }
@@ -271,6 +275,10 @@ nav .profile-link a {
     width: 100%;
 }
 
+.blog-main {
+    padding-top: 20px;
+}
+
 footer {
     width: 100%;
     height: 80px;
@@ -306,41 +314,98 @@ footer p {
     font-size: 3.5rem;
 }
 
-.blog-main {
-    display: grid;
-    grid-template-rows: 1fr 1fr .5fr;
-}
-
 .contact-main-container {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr 1fr;
-    background: #e6e9ed;
+    width: 100%;
+    min-height: 250px;
+    background: rgba(0, 0, 0, .1);
+    text-align: center;
+    padding-bottom: 50px;
 }
 
-.contact-main-container a {
-    text-decoration: none;
-    color: black;
-    padding-left: 200px;
+.contact-main-container div {
+    display: inline-block;
+    width: 49.5%;
+    height: 100%;
+}
+
+.contact-main-container div a {
     border-bottom: 1px solid black;
-    text-align: center;
+    margin-bottom: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
 }
 
-.contact-main-container p {
-    text-align: center;
+.contact-main-container .contact-left,
+.contact-right {
+    text-align: initial;
+    margin-top: 85px;
 }
 
 .contact-main-container img {
-    margin-left: 100px;
-    width: 96px;
+    width: 100px;
 }
 
-.contact-left {
-    display: flex;
-    justify-content: space-between;
+.profile-info {
+    padding: 70px 40px;
+    margin-bottom: 50px;
 }
 
-.contact-right {
+.img-container img {
+    width: 320px;
+    margin-right: 30px;
+    padding: 20px;
+    border-radius: 20%;
+    -webkit-border-radius: 20%;
+    -moz-border-radius: 20%;
+    -ms-border-radius: 20%;
+    -o-border-radius: 20%;
+}
+
+.profile-info .profile-container {
     display: flex;
-    justify-content: flex-end;
+}
+
+.profile-main-projects {
+    padding: 0 50px 40px;
+}
+
+.profile-main-projects h3 {
+    border-bottom: 1px solid #cdd2da;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.projects-main-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.project-container {
+    padding: 0 50px;
+    text-align: center;
+}
+
+.profile-info-text h1 {
+    font-size: 3rem;
+    padding: 20px 0;
+}
+
+.profile-info-text p {
+    font-size: 1.6rem;
+    padding-bottom: 20px;
+}
+
+.project-container figure {
+    width: 250px;
+}
+
+.project-container figure img {
+    width: 100%;
+    margin: 10px 0;
+    box-shadow: 0 0 5px black;
+}
+
+.project-container p {
+    margin: 10px 0 20px 0;
 }
