--- a/curso-maquetación-en-css/media-queries.css
+++ b/curso-maquetación-en-css/media-queries.css
@@ -20,10 +20,29 @@
     .profile-info .profile-container {
         display: block;
     }
+    .projects-main-container {
+        display: grid;
+        grid-template-columns: 49.5% 49.5%;
+    }
 }
 
 @media(max-width: 600px) {
     .blogs-posts-container .post-container {
         max-width: 95%;
+    }
+    .projects-main-container {
+        display: grid;
+        grid-template-columns: 100%;
+    }
+    .contact-main-container div {
+        display: inline-block;
+        width: 60%;
+        height: 100%;
+    }
+}
+
+@media(max-width:445px) {
+    .contact-main-container div {
+        padding: 10px 0;
     }
 }
