--- a/curso-transform-transition/transition-property/style.css
+++ b/curso-transform-transition/transition-property/style.css
@@ -19,7 +19,7 @@ html {
 
 footer {
     background: #000;
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     display: grid;
     place-content: center;
