--- a/curso-transform-transition/delay-transition/style.css
+++ b/curso-transform-transition/delay-transition/style.css
@@ -2,7 +2,37 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+footer {
+    background: #000;
+    width: 100%;
+    height: 10vh;
+    display: grid;
+    place-content: center;
+}
+
+footer p {
+    color: #fff;
+    text-align: center;
+    font-size: 2rem;
+}
+
+body {
     background: royalblue;
+}
+
+.dad {
+    font-size: 3rem;
+    background: #000;
+    padding: 20px 0;
+}
+
+h1 {
+    color: #fff;
+    padding: 20px 0 0 0;
+    font-size: 3rem;
+    text-align: center;
 }
 
 html {
