--- a/curso-transform-transition/backface-visibility/style.css
+++ b/curso-transform-transition/backface-visibility/style.css
@@ -55,3 +55,138 @@ body {
 .container {
     perspective: 1000px;
 }
+
+
+/* @media(prefers-reduced-motion: no-preference) {} */
+
+
+/* .card { */
+
+
+/* width: 200px; */
+
+
+/* height: 200px; */
+
+
+/* transform-style: preserve-3d; */
+
+
+/* position: relative; */
+
+
+/* transition: transform 0.5s; */
+
+
+/* transform-style: preserve-3d; */
+
+
+/* } */
+
+
+/* .card:hover .back { */
+
+
+/* opacity: 1; */
+
+
+/* } */
+
+
+/* .face { */
+
+
+/* border-radius: 20px; */
+
+
+/* width: 100%; */
+
+
+/* height: 100%; */
+
+
+/* position: absolute; */
+
+
+/* backface-visibility: hidden; */
+
+
+/* } */
+
+
+/* .face.front { */
+
+
+/* background: pink; */
+
+
+/* } */
+
+
+/* .face.back { */
+
+
+/* background: papayawhip; */
+
+
+/* transform: rotateY(180deg); */
+
+
+/* transition-duration: 0.6s; */
+
+
+/* z-index: 2; */
+
+
+/* opacity: 0; */
+
+
+/* } */
+
+
+/* @media (prefers-reduced-motion: no-preference) { */
+
+
+/* .card { */
+
+
+/* transition: transform 0.5s; */
+
+
+/* transform-style: preserve-3d; */
+
+
+/* } */
+
+
+/* .card:hover { */
+
+
+/* transform: rotateY(180deg); */
+
+
+/* } */
+
+
+/* .face { */
+
+
+/* backface-visibility: hidden; */
+
+
+/* } */
+
+
+/* .back { */
+
+
+/* transform: rotateY(180deg); */
+
+
+/* opacity: 1; */
+
+
+/* } */
+
+
+/* } */
