--- a/front-end-mentor/nft-preview-card-component-main/style.css
+++ b/front-end-mentor/nft-preview-card-component-main/style.css
@@ -39,6 +39,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        color: #00fff7;
     }
     
     html {
@@ -54,6 +55,11 @@
         font-size: 2rem;
         color: #fff;
         font-weight: 600;
+    }
+    
+    h1:hover {
+        color: var(--cyan);
+        cursor: pointer;
     }
     
     .wrapper {
@@ -152,9 +158,55 @@
         background-repeat: no-repeat;
     }
     
-    .img-container img {
+    .img-container .imga {
         width: 100%;
         border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+    }
+    
+    .card__container:hover .imga {
+        cursor: pointer;
+        opacity: 1;
+    }
+    
+    .card__container:hover .overlay {
+        opacity: 1;
+    }
+    
+    .card__container:hover .overlay span {
+        opacity: 1;
+    }
+    
+    .overlay-span span {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        left: 120px;
+        top: 130px;
+        background-image: url("images/icon-view.svg");
+        background-position: center;
+        background-size: center;
+        background-repeat: no-repeat;
+    }
+    
+    .overlay {
+        transition: opacity .2s ease-in-out;
+        width: 280px;
+        height: 300px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        background: var(--cyan);
+        border-radius: 5px;
+        opacity: 0;
+        -webkit-transition: opacity .2s ease-in-out;
+        -moz-transition: opacity .2s ease-in-out;
+        -ms-transition: opacity .2s ease-in-out;
+        -o-transition: opacity .2s ease-in-out;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
         -ms-border-radius: 5px;
@@ -176,6 +228,11 @@
     .footer .bold {
         color: #fff;
         font-weight: 400;
+    }
+    
+    .footer .bold:hover {
+        color: var(--cyan);
+        cursor: pointer;
     }
     
     .line {
