--- a/practice-anims-mockup-css/style.css
+++ b/practice-anims-mockup-css/style.css
@@ -533,8 +533,8 @@ body {
 }
 
 .modal__content--slider {
-    width: 300px;
-    height: 200px;
+    width: 600px;
+    height: 400px;
     transform-style: preserve-3d;
 }
 
@@ -584,8 +584,9 @@ body {
     display: grid;
     place-items: center;
     background: var(--yellow-01);
-    width: 50%;
+    width: 100%;
     height: 100%;
+    top: 40px;
     transition: transform 0.5s ease;
 }
 
@@ -645,6 +646,7 @@ body {
 }
 
 .modal__content h2 {
+    font-size: 2.4rem;
     grid-column: 1/2;
     grid-row: 1/2;
     align-self: flex-start;
@@ -701,11 +703,11 @@ body {
     -moz-transform: scale(1.2);
     -ms-transform: scale(1.2);
     -o-transform: scale(1.2);
-    transition: background .2s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
-    -webkit-transition: background .2s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
-    -moz-transition: background .2s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
-    -ms-transition: background .2s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
-    -o-transition: background .2s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
+    transition: background .1s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
+    -webkit-transition: background .1s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
+    -moz-transition: background .1s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
+    -ms-transition: background .1s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
+    -o-transition: background .1s ease-in-out, border .5s ease-in-out, transform .5s ease-in-out;
 }
 
 .modal__content .modal__content__button button:active {
@@ -713,5 +715,26 @@ body {
 }
 
 .modal__content .modal__content__button p {
+    margin: 0 40px;
+    text-align: center;
     font-size: 1.4rem;
+    color: var(--yellow-06);
+}
+
+.modal__content .modal__content__button button img {
+    width: 40px;
+    height: 30px;
+    background-position: center;
+    position: absolute;
+    left: 10px;
+    top: 2.5px;
+    background-size: center;
+    background-repeat: no-repeat;
+}
+
+.modal__content .modal__content__button button span {
+    position: absolute;
+    font-size: 1.6rem;
+    right: 15px;
+    top: 10px;
 }
