--- a/practice-anims-mockup-css/style.css
+++ b/practice-anims-mockup-css/style.css
@@ -35,7 +35,7 @@ html {
 
 body {
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     margin: 0;
     overflow: hidden;
     background: var(--green-03);
@@ -44,22 +44,25 @@ body {
 .page {
     position: relative;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     z-index: 1;
 }
 
 .container {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    min-width: 320px;
+    min-height: 400px;
     position: absolute;
     z-index: 1;
     display: grid;
-    grid-template: 20% 50% 30% / 55% 45%;
+    grid-template: 15% 65% 20% / 55% 45%;
     grid-template-areas: "nav     aside" "section aside" "footer aside";
 }
 
 .navbar {
-    grid-area: nav;
+    grid-column: 1/3;
+    grid-row: 1/2;
     display: flex;
 }
 
@@ -125,8 +128,10 @@ body {
 .main-content {
     grid-area: section;
     display: flex;
+    width: 100%;
     flex-direction: column;
-    justify-content: center;
+    justify-self: center;
+    align-self: center;
     animation: 2s main-content 1s ease-in-out;
     -webkit-animation: 2s main-content 1s ease-in-out;
     color: var(--yellow-06);
@@ -135,9 +140,9 @@ body {
 .main-content p:nth-child(2) {
     font-size: 2.6rem;
     font-weight: 300;
-    margin: 0 0 40px 60px;
-    width: 60%;
+    width: 100%;
     text-align: center;
+    margin: 0 40px 20px 20px;
     transition: all .2s ease-in-out;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -147,7 +152,6 @@ body {
 
 .main-content p:nth-child(2):hover {
     background: var(--yellow-01);
-    border-bottom: 4px solid var(--yellow-01);
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -163,9 +167,9 @@ body {
 .main-content p:nth-child(3) {
     font-size: 3rem;
     font-weight: 700;
-    width: 60%;
-    margin: 0 0 40px 60px;
+    width: 100%;
     text-align: center;
+    margin: 60px 40px 20px 0px;
     transition: all .2s ease-in-out;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -175,7 +179,6 @@ body {
 
 .main-content p:nth-child(3):hover {
     background: var(--yellow-01);
-    border-bottom: 4px solid var(--yellow-01);
     border-radius: 4px;
     transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
@@ -187,9 +190,9 @@ body {
 .main-content h1 {
     font-size: 3.6rem;
     font-weight: 700;
-    margin: 0 0 40px 60px;
-    width: 60%;
+    width: 100%;
     text-align: center;
+    margin: 0 40px 60px 20px;
     transition: all .2s ease-in-out;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -199,7 +202,6 @@ body {
 
 .main-content h1:hover {
     background: var(--yellow-01);
-    border-bottom: 4px solid var(--yellow-01);
     border-radius: 4px;
     transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
@@ -228,13 +230,13 @@ body {
 .side-content {
     display: grid;
     grid-area: aside;
-    grid-template: 1fr/ repeat(6, 1fr);
-    align-items: center;
+    grid-template: 1fr/ repeat(3, minmax(150px, 1fr));
+    place-items: center;
 }
 
-.side-content p {
+.side-content h2 {
     color: var(--yellow-06);
-    transform: rotate(-90deg);
+    writing-mode: sideways-lr;
     font-size: 3.6rem;
     grid-column: 1/2;
     grid-row: 1/2;
@@ -249,6 +251,8 @@ body {
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
     z-index: 3;
+    -webkit-writing-mode: sideways-lr;
+    -ms-writing-mode: sideways-lr;
 }
 
 @keyframes side-content-text {
@@ -262,7 +266,7 @@ body {
 
 .side-content img {
     width: 100%;
-    grid-column: 2/6;
+    grid-column: 2/4;
     grid-row: 1/2;
     animation: side-content-img 2s 0.5s ease-in-out;
     -webkit-animation: side-content-img 2s 0.5s ease-in-out;
@@ -287,26 +291,16 @@ body {
 }
 
 .side-content div {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background: var(--green-01);
-    grid-column: 4/7;
+    grid-column: 3/4;
     grid-row: 1/2;
     z-index: 1;
 }
 
-.side-content p {
-    transition: all .2s ease-in-out;
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    -ms-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-}
-
-.side-content p:hover {
-    background: var(--yellow-01);
-    border-bottom: 4px solid var(--yellow-01);
-    border-radius: 4px;
+.side-content h2 {
+    grid-column: 1/2;
     transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
@@ -314,17 +308,25 @@ body {
     -o-transition: all .5s ease-in-out;
 }
 
+.side-content h2:hover {
+    background: var(--yellow-01);
+    border-radius: 4px;
+    transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+}
+
 .footer {
     display: flex;
-    justify-content: space-evenly;
-    align-items: flex-end;
+    justify-content: space-between;
+    align-items: center;
+    overflow-x: auto;
+    max-height: 190px;
     transform: translateY(100%);
     background: var(--green-01);
-    border-radius: 0 80px 0 0;
-    -webkit-border-radius: 0 80px 0 0;
-    -moz-border-radius: 0 80px 0 0;
-    -ms-border-radius: 0 80px 0 0;
-    -o-border-radius: 0 80px 0 0;
+    border-radius: 10px;
     animation-name: footer;
     animation-duration: 0.5s;
     animation-delay: 2.5s;
@@ -333,6 +335,23 @@ body {
     -moz-transform: translateY(100%);
     -ms-transform: translateY(100%);
     -o-transform: translateY(100%);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.footer::-webkit-scrollbar {
+    width: 3px;
+}
+
+.footer::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.footer::-webkit-scrollbar-thumb {
+    background: var(--green-03);
+    outline: 1px solid var(--green-02);
 }
 
 @keyframes footer {
@@ -353,74 +372,39 @@ body {
 }
 
 .footer div img {
+    margin: 0 40px;
+    min-width: 200px;
     width: 200px;
-    position: absolute;
-    bottom: 30px;
     border-radius: 20px;
-    transform: translateY(0px) scale(1);
-    transition: transform .5s ease-in-out;
-    -webkit-transition: transform .5s ease-in-out;
-    -moz-transition: transform .5s ease-in-out;
-    -ms-transition: transform .5s ease-in-out;
-    -o-transition: transform .5s ease-in-out;
-    -webkit-transform: translateY(0px) scale(1);
-    -moz-transform: translateY(0px) scale(1);
-    -ms-transform: translateY(0px) scale(1);
-    -o-transform: translateY(0px) scale(1);
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
     z-index: 3;
+    transition: transform .8s ease-in-out;
+    -webkit-transition: transform .8s ease-in-out;
+    -moz-transition: transform .8s ease-in-out;
+    -ms-transition: transform .8s ease-in-out;
+    -o-transition: transform .8s ease-in-out;
 }
 
 .footer div img:hover {
     cursor: pointer;
-    transform: translateY(-20px) scale(1.2);
-    -webkit-transform: translateY(-20px) scale(1.2);
-    -moz-transform: translateY(-20px) scale(1.2);
-    -ms-transform: translateY(-20px) scale(1.2);
-    -o-transform: translateY(-20px) scale(1.2);
-    transition: transform .3s ease-in-out;
-    -webkit-transition: transform .3s ease-in-out;
-    -moz-transition: transform .3s ease-in-out;
-    -ms-transition: transform .3s ease-in-out;
-    -o-transition: transform .3s ease-in-out;
-}
-
-.footer div {
-    width: 200px;
-    height: 50%;
-    border-radius: 20px 20px 0 0;
-    -webkit-border-radius: 20px 20px 0 0;
-    -moz-border-radius: 20px 20px 0 0;
-    -ms-border-radius: 20px 20px 0 0;
-    -o-border-radius: 20px 20px 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer div {
-    background: var(--green-01);
-    transition: background .5s ease-in-out;
-    -webkit-transition: background .5s ease-in-out;
-    -moz-transition: background .5s ease-in-out;
-    -ms-transition: background .5s ease-in-out;
-    -o-transition: background .5s ease-in-out;
-}
-
-.footer div:hover {
-    background: var(--yellow-01);
-    transition: background .3s ease-in-out;
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    -ms-transition: background .3s ease-in-out;
-    -o-transition: background .3s ease-in-out;
+    transform: scale(1.2);
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
     -ms-transform: scale(1.2);
     -o-transform: scale(1.2);
+    transition: transform .5s ease-in-out;
+    -webkit-transition: transform .5s ease-in-out;
+    -moz-transition: transform .5s ease-in-out;
+    -ms-transition: transform .5s ease-in-out;
+    -o-transition: transform .5s ease-in-out;
 }
 
 .loader {
@@ -436,8 +420,8 @@ body {
     right: 0;
     left: 0;
     z-index: 3;
-    animation: loader 2s linear forwards;
-    -webkit-animation: loader 2s linear forwards;
+    animation: loader .2s linear forwards;
+    -webkit-animation: loader .2s linear forwards;
 }
 
 .loader div {
@@ -451,8 +435,8 @@ body {
     -moz-transform: scale(0);
     -ms-transform: scale(0);
     -o-transform: scale(0);
-    animation: scaling 2s ease-in-out infinite;
-    -webkit-animation: scaling 2s ease-in-out infinite;
+    animation: scaling .2s ease-in-out infinite;
+    -webkit-animation: scaling .2s ease-in-out infinite;
 }
 
 @keyframes loader {
@@ -533,8 +517,8 @@ body {
 }
 
 .modal__content--slider {
-    width: 600px;
-    height: 400px;
+    width: 80%;
+    height: 80%;
     transform-style: preserve-3d;
 }
 
@@ -632,8 +616,6 @@ body {
     display: none;
 }
 
-.footer .hover-1:hover .side-content img {}
-
 .modal__content .modal__content__button {
     display: grid;
     grid-column: 1/2;
@@ -661,13 +643,12 @@ body {
 
 .modal__content h2:hover {
     background: var(--yellow-01);
-    border-bottom: 4px solid var(--yellow-01);
     border-radius: 4px;
-    transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -ms-transition: all .5s ease-in-out;
-    -o-transition: all .5s ease-in-out;
+    transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
 }
 
 .modal__content .modal__content__button button {
@@ -738,3 +719,44 @@ body {
     right: 15px;
     top: 10px;
 }
+
+@media (max-width: 1366px) {
+    .main-content h1 {
+        width: 100%
+    }
+    .main-content p:nth-child(3) {
+        width: 100%
+    }
+    .main-content p:nth-child(2) {
+        width: 100%
+    }
+}
+
+@media (max-width: 900px) {
+    .footer {
+        grid-column: 1/3;
+        grid-row: 3/4;
+        overflow-x: scroll;
+    }
+    .main-content p:nth-child(3) {
+        font-size: 2rem;
+    }
+    .main-content p:nth-child(2) {
+        font-size: 2rem;
+    }
+    .main-content h1 {
+        font-size: 2.8rem;
+    }
+    .side-content img {
+        grid-column: 2/4;
+    }
+    .side-content div {
+        display: none;
+    }
+    .side-content h2 {
+        grid-column: 1/2;
+        font-size: 2.8rem;
+    }
+}
+
+@media (max-width: 600px) {}
