--- a/project-build-1/style.css
+++ b/project-build-1/style.css
@@ -36,6 +36,7 @@ header {
     position: sticky;
     top: 0;
     background: var(--navbar);
+    overflow: hidden;
 }
 
 .nav {
@@ -380,8 +381,6 @@ section {
     -o-transition: opacity .5s ease-in-out;
 }
 
-.gallery__container .card-01.active {}
-
 .gallery__container .card.active p {
     opacity: .8;
     transition: opacity 1s ease-in-out;
@@ -389,14 +388,6 @@ section {
     -moz-transition: opacity 1s ease-in-out;
     -ms-transition: opacity 1s ease-in-out;
     -o-transition: opacity 1s ease-in-out;
-}
-
-.gallery__container .card-01 {
-    background-position: center;
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    flex: 0.5;
-    margin: 10px;
 }
 
 .gallery__container .card img {
@@ -467,6 +458,249 @@ section {
     -moz-transition: transform .5s ease-in-out;
     -ms-transition: transform .5s ease-in-out;
     -o-transition: transform .5s ease-in-out;
+}
+
+.contact {
+    width: 100%;
+    overflow: hidden;
+    background: var(--gradient-base);
+}
+
+.contact__main .img-container img {
+    height: 60vh;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.contact__main .main__text {
+    text-align: center;
+    position: relative;
+    bottom: 300px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 80%;
+    display: grid;
+    grid-template: repeat(2, 50%), 100%;
+    gap: 50px;
+}
+
+.main__text .main__title {
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 400;
+}
+
+.main__text .main__title h1 {
+    font-size: 4rem;
+    text-align: center;
+    font-weight: 400;
+    color: var(--red);
+}
+
+.main__text .main__paragraph p {
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+
+.contact__team {
+    margin-top: 100px;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 30% 70%;
+    place-content: center;
+}
+
+.team-wrapper {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: repeat(3, 33%);
+    place-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.team-wrapper .team-icons {
+    display: flex;
+    gap: 10px;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.team-wrapper .team-icons p:nth-child(2) {
+    font-size: 3rem;
+}
+
+.team-wrapper .team-icons p:nth-child(3) {
+    font-size: 1.2rem;
+}
+
+.team-wrapper .team-icons img {
+    width: 80px;
+    height: 80px;
+    background-color: var(--red);
+    padding: 20px;
+    border-radius: 20%;
+    -webkit-border-radius: 20%;
+    -moz-border-radius: 20%;
+    -ms-border-radius: 20%;
+    -o-border-radius: 20%;
+}
+
+.team-icon-1 {
+    grid-column: 1/2;
+}
+
+.team-icon-2 {
+    grid-column: 2/3;
+}
+
+.team-icon-3 {
+    grid-column: 3/4;
+}
+
+.team__our-team {
+    margin-top: 100px;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    width: 100%;
+    height: 100%;
+    place-self: center;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 80%;
+    place-items: center;
+}
+
+.team__our-team .our-team__text {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    display: grid;
+    width: 80%;
+    height: 100%;
+    place-items: center;
+}
+
+.team__our-team .our-team__text h2 {
+    font-size: 4rem;
+    font-weight: 400;
+    border-left: 2px solid var(--red);
+}
+
+.team__our-team .our-team__text p {
+    margin-top: 20px;
+    width: 60%;
+}
+
+.modal__content--slider {
+    margin-top: 100px;
+    width: 100%;
+    height: 100%;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    place-self: center;
+}
+
+.team__cards {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.team__cards img {
+    width: 140px;
+    border-radius: 20%;
+    -webkit-border-radius: 20%;
+    -moz-border-radius: 20%;
+    -ms-border-radius: 20%;
+    -o-border-radius: 20%;
+}
+
+.team-card {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    cursor: pointer;
+    width: 50%;
+    transition: transform 0.5s ease;
+    place-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    justify-items: center;
+}
+
+.team-card h3 {
+    font-size: 1.8rem;
+}
+
+.team-card p {
+    font-size: 1.6rem;
+}
+
+#radio-1:checked~.team__cards #team-card-1,
+#radio-2:checked~.team__cards #team-card-2,
+#radio-3:checked~.team__cards #team-card-3 {
+    opacity: 1;
+    z-index: 6;
+    transform: translateX(0) scale(1) translateY(50%);
+    -webkit-transform: translateX(0) scale(1) translateY(50%);
+    -moz-transform: translateX(0) scale(1) translateY(50%);
+    -ms-transform: translateX(0) scale(1) translateY(50%);
+    -o-transform: translateX(0) scale(1) translateY(50%);
+}
+
+#radio-1:checked~.team__cards #team-card-2,
+#radio-2:checked~.team__cards #team-card-3,
+#radio-3:checked~.team__cards #team-card-1 {
+    opacity: 0.5;
+    z-index: 1;
+    transform: translateX(50%) scale(.8);
+    -webkit-transform: translateX(50%) scale(.8);
+    -moz-transform: translateX(50%) scale(.8);
+    -ms-transform: translateX(50%) scale(.8);
+    -o-transform: translateX(50%) scale(.8);
+}
+
+#radio-1:checked~.team__cards #team-card-3,
+#radio-2:checked~.team__cards #team-card-1,
+#radio-3:checked~.team__cards #team-card-2 {
+    opacity: 0.5;
+    z-index: 1;
+    transform: translateX(-50%) scale(.8);
+    -webkit-transform: translateX(-50%) scale(.8);
+    -moz-transform: translateX(-50%) scale(.8);
+    -ms-transform: translateX(-50%) scale(.8);
+    -o-transform: translateX(-50%) scale(.8);
+}
+
+#radio-1,
+#radio-2,
+#radio-3 {
+    display: none;
+}
+
+.contact__location {
+    margin-top: 200px;
+    height: 80vh;
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.location__container {
+    width: 80%;
+    height: 300px;
+    border: 2px solid #000;
 }
 
 .footer {
@@ -560,6 +794,12 @@ section {
     animation-delay: 0.6s;
 }
 
+@media (min-width: 450px) {
+    .contact__main .img-container img {
+        height: 80vh;
+    }
+}
+
 @media (min-width: 600px) {
     .nav {
         display: grid;
@@ -595,5 +835,9 @@ section {
         text-decoration: none;
         color: var(--white-base);
         display: block;
+    }
+    .contact__main .img-container img {
+        width: 100%;
+        height: 100%;
     }
 }
